--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "15.1.2",
@@ -23,7 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "sass": "^1.83.0",
     "tailwindcss": "^3.4.1",
