--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -79,10 +79,10 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
-      - name: Build with Next.js
-        env:
-          NODE_ENV: production
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      # - name: Build with Next.js
+      #   env:
+      #     NODE_ENV: production
+      #   run: ${{ steps.detect-package-manager.outputs.runner }} next build
 
   # Deployment job
   deploy:
